actualizadas algunas cosas, falta definir estilo, implementar mediaqueys, y avanzar en las paginas faltantes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         </section>
         <section class="opinionesClientes">
-            <h2></h2>
+            <h2>Melómanas, melómanos y otras tintas</h2>
             <a class="boton" href="./pages/productos.html">CONSEGUI NUESTROS PRODUCTOS</a>
             <div class="galeriaClientes">
                 <div class="tarjetaClientes">
@@ -119,16 +119,18 @@
 
     <footer class="footer">
     <!-- F O O T E R -->
-          <section class="descuentoEmail">
+
+        <div class="contDescuentoEmail">
+            <div  class="descuentoEmail">
             <H3>Consigue un descuento</H3>
             <form action="">
                 <label for="email">Ingresá tu email</label>
-                <input type="email" placeholder="Tu correo electrónico" id="emailSusc" name="emailSusc">
-                <input type="submit" value=" Sigamos en contacto ">
+                <input type="email" placeholder="Sigamos en contacto" id="emailSusc" name="emailSusc">
+                <input type="submit" value=" Enviar ">
             </form>
-        
-        </section>
-        
+            </div>        
+        </div>
+
 
         <a href="#">
             <img class="logoFooter" src="./assets/lautLogo.png" alt="Logo LAUT">
@@ -145,7 +147,7 @@
         <nav class="whoss">
             <h3>LAUT</h3>
             <ul>
-                <li class="listaItemFoo"><a href="">Quiénes somos</a></li>
+                <li class="listaItemFoo"><a href="./pages/Nosotres.html">Quiénes somos</a></li>
                 <li class="listaItemFoo"><a href="">Política de Privacidad</a></li>
                 <li class="listaItemFoo"><a href="">Términos y Condiciones</a></li>
             </ul>
