--- a/pages/productos.html
+++ b/pages/productos.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Martel+Sans:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7a01b3f9c6.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="../css/estilos.css">
+
+<script type="text/javascript" src="../api/lautfm_js_tools-master/lautfm_js_tools.js"></script>
+
 </head>
 <body>
 
