--- a/pages/mensajeEnviado.html
+++ b/pages/mensajeEnviado.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto LAUT</title>
+    <title>mensaje enviado LAUT</title>
     <link rel="icon" href="../assets/icolaut_32.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,15 +37,7 @@
     <div class="formularioContacto">
          <h2>Contacto</h2>
 
-            <form action="./mensajeEnviado.html" method="post">
-             <label for="name">Nombre:</label>
-              <input type="text" id="name" name="name" required>
-               <label for="email">Correo Electrónico:</label>
-             <input type="email" id="email" name="email" required>
-             <label for="message">Mensaje:</label>
-             <textarea id="message" name="message" rows="4" required></textarea>
-             <button type="submit">Enviar</button>
-            </form>
+            <p>Gracias por tu mensaje. El equipo de <span>LAUT</span> pronto se comunicara con vos. Disfruta de nuestas secciones.</p>
 
 
     </main>
